--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button id="modalBtn" class="button">Add Book</button>
+
+    <div class="modal" id="bookEntryModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="closeBtn">&times;</span>
+                <h2>Please enter book info</h2>
+            </div>
+            <div class="modal-body">
+                <p>Title</p>
+                <input type="text" class="bookinfo">
+                <p>Author</p>
+                <input type="text" class="bookinfo">
+                <p>Year</p>
+                <input type="text" class="bookinfo">
+            </div>
+            <div class="modal-footer">
+                <button class="button" id="enterBtn">Enter</button>
+                <div class="checkboxholder"><input type="checkbox" id="hasReadCheckbox"></div>
+                <p>Already Read?</p>
+               
+            </div>
+        </div>
+    </div>
 </body>
 </html>
