--- a/index.html
+++ b/index.html
@@ -9,27 +9,36 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="modalBtn" class="button">Add Book</button>
+    <div id="library-container" class="container">
+        <div id="Header" class="header">
+            <div>
+                <button id="modalBtn" class="button">Add Book</button>
+            </div>
+            <div><p>About Us</p></div>
+            <div><p>Donate</p></div>
+            <div><p>Login</p></div>
+        </div>
 
-    <div class="modal" id="bookEntryModal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <span class="closeBtn">&times;</span>
-                <h2>Please enter book info</h2>
-            </div>
-            <div class="modal-body">
-                <p>Title</p>
-                <input type="text" class="bookinfo">
-                <p>Author</p>
-                <input type="text" class="bookinfo">
-                <p>Year</p>
-                <input type="text" class="bookinfo">
-            </div>
-            <div class="modal-footer">
-                <button class="button" id="enterBtn">Enter</button>
-                <div class="checkboxholder"><input type="checkbox" id="hasReadCheckbox"></div>
-                <p>Already Read?</p>
-               
+        <div class="modal" id="bookEntryModal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <span class="closeBtn">&times;</span>
+                    <h2>Please enter book info</h2>
+                </div>
+                <div class="modal-body">
+                    <p>Title</p>
+                    <input type="text" class="bookinfo">
+                    <p>Author</p>
+                    <input type="text" class="bookinfo">
+                    <p>Year</p>
+                    <input type="text" class="bookinfo">
+                </div>
+                <div class="modal-footer">
+                    <button class="button" id="enterBtn">Enter</button>
+                    <div class="checkboxholder"><input type="checkbox" id="hasReadCheckbox"></div>
+                    <p>Already Read?</p>
+                
+                </div>
             </div>
         </div>
     </div>
