--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             <div><p>Login</p></div>
         </div>
 
+        
+        <!-- begin modal -->
         <div class="modal" id="bookEntryModal">
             <div class="modal-content">
                 <div class="modal-header">
                     <span class="closeBtn">&times;</span>
-                    <h2>Please enter book info</h2>
+                    <h2>Please enter info</h2>
                 </div>
                 <div class="modal-body">
                     <p>Title</p>
