pushing to work on laptop

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="modal-footer">
                 <button class="button" id="enterBtn">Enter</button>
-                <div class="checkboxholder"><input type="checkbox" id="hasReadCheckbox"></div>
+                <div class="checkboxholder"><input type="checkbox" id="hasReadCheckbox" class="bookinfo"></div>
                 <p>Already Read?</p>
             
             </div>
